clob variable added

--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -27,6 +27,7 @@
                     <span th:text="${item.result.batchId}">Batch ID</span> -
                     <span th:text="${item.result.batchDesc}">Batch Description</span> -
                     <span th:text="${item.result.script}">Script</span><br/>
+                    <span th:text="${item.result.scriptClob}">Script</span><br/>
                     <strong>Query:</strong><br/>
                     <pre th:text="${item.query}">Query</pre>
                 </div>
@@ -46,6 +47,7 @@
                     <span th:text="${item.result.feedFileName}">Feed File Name</span> -
                     <span th:text="${item.result.exSql}">Extract SQL</span> -
                     <span th:text="${item.result.postScript}">Post Script</span><br/>
+                    <span th:text="${item.result.prevScript}">Post Script</span><br/>
                     <strong>Query:</strong><br/>
                     <pre th:text="${item.query}">Query</pre>
                 </div>
