--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -73,8 +73,8 @@ button:hover {
 }
 
 .results-content {
-    display: none;
     margin-top: 10px;
+    display: none; /* Başlangıçta gizli */
 }
 
 .results-list {
@@ -119,6 +119,10 @@ button:hover {
     white-space: pre-wrap;
 }
 
+.results-section {
+    margin-bottom: 20px;
+}
+
 .toggle-header {
     cursor: pointer;
     padding: 10px;
@@ -132,6 +136,11 @@ button:hover {
     align-items: center;
 }
 
-.toggle-header:hover {
-    background-color: #e9e9e9;
+.toggle-header .arrow {
+    font-size: 1.2em;
+    transition: transform 0.3s;
+}
+
+.toggle-header .arrow.up {
+    transform: rotate(180deg);
 }
